--- a/responsive-news-site/webroot/css/section_happening_now.css
+++ b/responsive-news-site/webroot/css/section_happening_now.css
@@ -18,7 +18,21 @@
 @media (min-width: 768px) {
   #section_happening_now {
     margin-block-start: -5rem;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 40px;
   }
+  #section_happening_now header {
+    grid-column: 1/ 3;
+  }
+  #section_happening_now .article_card1 {
+    grid-column: 1 / 3;
+  }
+  #section_happening_now .article_card2 {
+    grid-column: 1 / 3;
+    margin-block-end: -2rem;
+  }
+
   #section_happening_now .article_card {
     padding-inline-start: 2rem;
     padding-inline-end: 2rem;
