--- a/responsive-news-site/webroot/css/section_trending.css
+++ b/responsive-news-site/webroot/css/section_trending.css
@@ -16,21 +16,18 @@
   #section_trending article:nth-of-type(2) ~ article {
     display: none;
   }
-}
-
-@media (min-width: 768px) {
-  #section_trending{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 40px;
-    padding-block-end: 2rem;
-    margin-inline-end: 0;
-  }
-  #section_trending> header {
-    grid-column: 1 / 3;
-  }
-  #section_trending .article_swatch {
-    margin-block-start: 0;
-    margin-inline-start: 0;
-  }
+   #section_trending{
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      column-gap: 40px;
+      padding-block-end: 2rem;
+      margin-inline-end: 0;
+    }
+    #section_trending > header {
+      grid-column: 1 / 3;
+    }
+    #section_trending .article_swatch {
+      margin-block-start: 0;
+      margin-inline-start: 0;
+    }
 }
